--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -17,7 +17,7 @@ code {
     background: #36393f;
     border-radius: 5px;
     color: #fff;
-    padding: 10px 20px;
+    padding: 20px;
     margin-top: 30px;
     max-width: 800px;
     width: 100%;
