--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -111,6 +111,7 @@ code {
 @media only screen and (min-width: 800px) {
     .servers {
         display: grid;
+        grid-template-rows: repeat(auto-fit, 30vh);
         grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
         grid-gap: 40px;
         min-height: calc(100vh - 100px);
