--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Palanquin:wght@400;600&display=swap");
 
 body {
+    background-color: #1c1d20;
     margin: 0;
     font-family: "Palanquin", sans-serif;
     -webkit-font-smoothing: antialiased;
@@ -60,7 +61,7 @@ code {
 }
 
 .column-name {
-    color: #000;
+    color: #fff;
     font-size: 1.4rem;
     text-transform: capitalize;
 }
