feat(frontend): scroll to end of chat  - on new message, scroll to end of all chat windows

--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -77,6 +77,10 @@ code {
     margin-bottom: 20px;
 }
 
+.chat > div:last-child {
+    padding-bottom: 12px;
+}
+
 .source {
     color: #a2d9ea;
     margin-right: 5px;
