--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -103,6 +103,29 @@ code {
     font-weight: 400;
 }
 
+.image-attachment {
+    display: block;
+    padding: 4px 0;
+}
+
+.item--collapsed {
+    display: block;
+    background: #282828;
+    cursor: pointer;
+    padding: 2px;
+    border-radius: 7px;
+    color: #979797;
+    text-align: center;
+    width: 120px;
+    font-size: 16px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
+.item--collapsed:hover {
+    background: #222;
+}
+
 @media only screen and (min-width: 500px) {
     .header {
         display: flex;
